apply plugin: 'com.android.application'

android {
    compileSdkVersion 34
    buildToolsVersion "30.0.3"
    defaultConfig {
        applicationId "com.mcpcustomer_post_new_ps_n.android"
        minSdkVersion 21
        targetSdkVersion 34
        versionCode 12
        versionName "4.1.6"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled true
    }
    buildTypes {
        release {
            shrinkResources true
            minifyEnabled true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }


    testOptions {
        unitTests.all {
            it.useJUnitPlatform()
            it.jvmArgs '--add-opens', 'java.base/java.io=ALL-UNNAMED'
        }
    }
    namespace 'com.mcpcustomer_post_new_ps_n.android'

}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'com.google.android.material:material:1.12.0'
    implementation "androidx.recyclerview:recyclerview:1.3.2"
    implementation 'androidx.multidex:multidex:2.0.1'

    implementation 'androidx.cardview:cardview:1.0.0'
    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.3'
    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test:runner:1.6.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'

    //multiple compatible
    implementation 'com.intuit.sdp:sdp-android:1.0.6'
    implementation 'com.intuit.ssp:ssp-android:1.0.6'

    //implementation 'com.kaopiz:kprogresshud:1.2.0'
    implementation 'de.hdodenhof:circleimageview:3.1.0'

    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
    implementation 'com.google.code.gson:gson:2.8.9'

    implementation 'com.squareup.picasso:picasso:2.71828'
    implementation 'com.google.code.gson:gson:2.8.9'
    implementation 'com.codesgood:justifiedtextview:1.1.0'
    implementation 'com.karumi:dexter:6.2.2'

    implementation 'com.android.volley:volley:1.2.1'
    implementation 'com.codesgood:justifiedtextview:1.1.0'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'

    implementation 'com.github.eddydn:videoplayer:1.10'

    implementation 'com.github.bumptech.glide:glide:4.12.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation 'com.google.android.exoplayer:exoplayer:2.19.1'

    implementation 'com.github.harrisonsj:KProgressHUD:1.1'

    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.3'

}
